--- a/index.html
+++ b/index.html
@@ -4,70 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My projects</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <style>
-    :root {
-      --header-height: 3rem;
-    }
-    body {
-      margin: 0;
-      display: flex;
-    }
-    .container {
-      width: 17rem;
-      height: 100vh;
-      background-color: rgb(228, 228, 228);
-      padding: 0 1rem;
-    }
 
-    .projects {
-      padding: 1rem;
-      display: flex;
-      flex-direction: column;
-    }
-    h1 {
-      color: rgb(5, 64, 101);
-    }
-    a {
-      min-height: var(--header-height);
-      color: black;
-      text-decoration: none;
-      font-size: 1.3rem;
-    }
-    a:hover {
-      color: rgb(5, 64, 101);
-      text-decoration: underline;
-      text-underline-offset: 0.4rem;
-    }
-    iframe {
-      border: none;
-      width: 100vw;
-    }
-  </style>
   <body>
     <div class="container">
-      <div class="becode">
-        <h1>Brussel's Johnson 09</h1>
-        <p>This is a repository for my BeCode projects.</p>
+      <div class="content-menu">
+        <div class="becode">
+          <h1>Brussel's Johnson 09</h1>
+          <p>This is a repository for my BeCode projects.</p>
+        </div>
+        <div class="projects">
+          <ul class="navbar">
+            <li>
+              <a href="/be-code/my-becode" target="icontent"> 1 - My readme </a>
+            </li>
+            <li>
+              <a href="/be-code/chinese-farmer" target="icontent">
+                2 - Progressive enhancement</a
+              >
+            </li>
+            <li>
+              <a href="/be-code/turlututu" target="icontent">
+                2.1 - Turlututu copy</a
+              >
+            </li>
+            <li>
+              <a href="/be-code/v-card" target="icontent"> 3- V-Card</a>
+            </li>
+            <li>
+              <a href="/be-code/responsive-frontEnd" target="icontent">
+                4 - Responsive</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="projects">
-        <a href="/be-code/my-becode" target="icontent"> 1 - My readme </a>
-        <a href="/be-code/chinese-farmer" target="icontent">
-          2 - Progressive enhancement</a
-        >
-        <a href="/be-code/turlututu" target="icontent"> 2.1 - Turlututu copy</a>
-        <a href="/be-code/v-card" target="icontent"> 3- V-Card</a>
-        <a href="/be-code/responsive-frontEnd" target="icontent">
-          4 - Responsive</a
-        >
-      </div>
+
+      <iframe
+        id="icontent"
+        name="icontent"
+        src="/be-code/v-card"
+        allowTransparency="true"
+      ></iframe>
     </div>
-    <iframe
-      id="icontent"
-      name="icontent"
-      src="/be-code/v-card"
-      allowTransparency="true"
-    ></iframe>
   </body>
 </html>
