--- a/v-card/index.html
+++ b/v-card/index.html
@@ -13,63 +13,20 @@
   </head>
 
   <body>
-    <div class="container flex">
+    <div class="container">
       <div class="content">
-        <div class="social-info flex">
-          <div class="logo">
-            <img src="./assets/logo.png" alt="" />
-          </div>
-          <div class="contact flex">
-            <div class="email">
-              <p class="my-social">Email</p>
-              <p>glauciellesa@gmail.com</p>
-            </div>
-            <div class="phone">
-              <p class="my-social">Phone</p>
-              <p>+32 495 99 90 50</p>
-            </div>
-
-            <div class="home-social flex">
-              <p class="my-social">Find Me On</p>
-              <div class="social-icons">
-                <a
-                  href="https://www.linkedin.com/in/glauciellec/"
-                  target="_blank"
-                  class="home_social-icon"
-                >
-                  <i class="uil uil-linkedin-alt"></i>
-                </a>
-
-                <a
-                  href="https://github.com/glauciellesa"
-                  target="_blank"
-                  class="home_social-icon"
-                >
-                  <i class="uil uil-github-alt"></i>
-                </a>
-
-                <a
-                  href="https://www.instagram.com/eidizai_portugues/"
-                  target="_blank"
-                  class="home_social-icon"
-                >
-                  <i class="uil uil-instagram"></i>
-                </a>
-
-                <a
-                  href="https://glauciellesa.github.io/"
-                  target="_blank"
-                  class="web-icon"
-                >
-                  <i class="uil uil-web"></i>
-                </a>
-              </div>
-            </div>
-          </div>
+        <div class="logo">
+          <img src="./assets/logo.png" alt="" />
         </div>
-        <div class="description flex">
-          <div class="description-container">
-            <div class="title flex">
+        <div class="description-container">
+          <div class="my-img">
+            <img
+              src="./assets/glaucielle's-picture.JPG"
+              alt="Glaucielle's picture"
+            />
+          </div>
+          <div class="description">
+            <div class="title">
               <p class="title-name">GLAUCIELLE SA</p>
               <p class="title-profession">Full Stack developer - BeCode</p>
             </div>
@@ -81,7 +38,7 @@
                 great communication skills.
               </p>
             </div>
-            <div class="info-buttons">
+            <div class="info-buttons flex">
               <button class="portfolio">
                 <a href="https://glauciellesa.github.io/" target="_blank">
                   PORTFOLIO
@@ -98,11 +55,53 @@
             </div>
           </div>
         </div>
-        <div class="my-img">
-          <img
-            src="./assets/glaucielle's-picture.JPG"
-            alt="Glaucielle's picture"
-          />
+        <div class="social-info">
+          <div class="contact">
+            <div class="email">
+              <p class="my-social">Email</p>
+              <p>glauciellesa@gmaail.com</p>
+            </div>
+            <div class="phone">
+              <p class="my-social">Phone</p>
+              <p>+32 495 99 90 50</p>
+            </div>
+          </div>
+          <div class="home-social">
+            <p class="my-social">Find Me On</p>
+            <div class="social-icons">
+              <a
+                href="https://www.linkedin.com/in/glauciellec/"
+                target="_blank"
+                class="home_social-icon"
+              >
+                <i class="uil uil-linkedin-alt"></i>
+              </a>
+
+              <a
+                href="https://github.com/glauciellesa"
+                target="_blank"
+                class="home_social-icon"
+              >
+                <i class="uil uil-github-alt"></i>
+              </a>
+
+              <a
+                href="https://www.instagram.com/eidizai_portugues/"
+                target="_blank"
+                class="home_social-icon"
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
+
+              <a
+                href="https://glauciellesa.github.io/"
+                target="_blank"
+                class="web-icon"
+              >
+                <i class="uil uil-web"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
